apps/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
spec:
  replicas: 1

  selector:
    matchLabels:
      app: gitea

  template:
    metadata:
      labels:
        app: gitea

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: gitea
          image: docker.gitea.com/gitea:1.24.7

          ports:
            - containerPort: 3000
            - containerPort: 22

          volumeMounts:
            - mountPath: /data
              name: data

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-data
